--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="/main.54166fbf.css">
+  <link rel="stylesheet" href="./main.54166fbf.css">
   <title>Course name - Minor Web Development - CMD Amsterdam</title>
 
-<script src="/main.54166fbf.js"></script></head>
+<script src="./main.54166fbf.js"></script></head>
 <body>
   <input type="radio" id="light" name="darkmode" value="light">
   <label for="light">Light mode</label>
@@ -17,52 +17,52 @@
     <section>
       <div>
         <p>
-          <span>“A Psalm of Life” <img src="/curly-seperator.8170185f.svg" alt="curly seperator"> Henry Wadsworth Longfellow <img src="/curly-seperator.8170185f.svg" alt="curly seperator"> 1807-1882 <img src="/curly-seperator.8170185f.svg" alt="curly seperator"> A beatiful poem <img src="/curly-seperator.8170185f.svg" alt="curly seperator"></span>
+          <span>“A Psalm of Life” <img src="./curly-seperator.8170185f.svg" alt="curly seperator"> Henry Wadsworth Longfellow <img src="./curly-seperator.8170185f.svg" alt="curly seperator"> 1807-1882 <img src="./curly-seperator.8170185f.svg" alt="curly seperator"> A beatiful poem <img src="./curly-seperator.8170185f.svg" alt="curly seperator"></span>
         </p>
         <p>
-          <span>“A Psalm of Life” <img src="/curly-seperator.8170185f.svg" alt="curly seperator"> Henry Wadsworth Longfellow <img src="/curly-seperator.8170185f.svg" alt="curly seperator"> 1807-1882 <img src="/curly-seperator.8170185f.svg" alt="curly seperator"> A beatiful poem <img src="/curly-seperator.8170185f.svg" alt="curly seperator"></span>
+          <span>“A Psalm of Life” <img src="./curly-seperator.8170185f.svg" alt="curly seperator"> Henry Wadsworth Longfellow <img src="./curly-seperator.8170185f.svg" alt="curly seperator"> 1807-1882 <img src="./curly-seperator.8170185f.svg" alt="curly seperator"> A beatiful poem <img src="./curly-seperator.8170185f.svg" alt="curly seperator"></span>
         </p>
       </div>
       <div>
         <p>
-          <span>“A Psalm of Life” <img src="/curly-seperator.8170185f.svg" alt="curly seperator"> Henry Wadsworth Longfellow <img src="/curly-seperator.8170185f.svg" alt="curly seperator"> 1807-1882 <img src="/curly-seperator.8170185f.svg" alt="curly seperator"> A beatiful poem <img src="/curly-seperator.8170185f.svg" alt="curly seperator"></span>
+          <span>“A Psalm of Life” <img src="./curly-seperator.8170185f.svg" alt="curly seperator"> Henry Wadsworth Longfellow <img src="./curly-seperator.8170185f.svg" alt="curly seperator"> 1807-1882 <img src="./curly-seperator.8170185f.svg" alt="curly seperator"> A beatiful poem <img src="./curly-seperator.8170185f.svg" alt="curly seperator"></span>
         </p>
         <p>
-          <span>“A Psalm of Life” <img src="/curly-seperator.8170185f.svg" alt="curly seperator"> Henry Wadsworth Longfellow <img src="/curly-seperator.8170185f.svg" alt="curly seperator"> 1807-1882 <img src="/curly-seperator.8170185f.svg" alt="curly seperator"> A beatiful poem <img src="/curly-seperator.8170185f.svg" alt="curly seperator"></span>
+          <span>“A Psalm of Life” <img src="./curly-seperator.8170185f.svg" alt="curly seperator"> Henry Wadsworth Longfellow <img src="./curly-seperator.8170185f.svg" alt="curly seperator"> 1807-1882 <img src="./curly-seperator.8170185f.svg" alt="curly seperator"> A beatiful poem <img src="./curly-seperator.8170185f.svg" alt="curly seperator"></span>
         </p>
       </div>
       <div>
         <p>
-          <span>“A Psalm of Life” <img src="/curly-seperator.8170185f.svg" alt="curly seperator"> Henry Wadsworth Longfellow <img src="/curly-seperator.8170185f.svg" alt="curly seperator"> 1807-1882 <img src="/curly-seperator.8170185f.svg" alt="curly seperator"> A beatiful poem <img src="/curly-seperator.8170185f.svg" alt="curly seperator"></span>
+          <span>“A Psalm of Life” <img src="./curly-seperator.8170185f.svg" alt="curly seperator"> Henry Wadsworth Longfellow <img src="./curly-seperator.8170185f.svg" alt="curly seperator"> 1807-1882 <img src="./curly-seperator.8170185f.svg" alt="curly seperator"> A beatiful poem <img src="./curly-seperator.8170185f.svg" alt="curly seperator"></span>
         </p>
         <p>
-          <span>“A Psalm of Life” <img src="/curly-seperator.8170185f.svg" alt="curly seperator"> Henry Wadsworth Longfellow <img src="/curly-seperator.8170185f.svg" alt="curly seperator"> 1807-1882 <img src="/curly-seperator.8170185f.svg" alt="curly seperator"> A beatiful poem <img src="/curly-seperator.8170185f.svg" alt="curly seperator"></span>
+          <span>“A Psalm of Life” <img src="./curly-seperator.8170185f.svg" alt="curly seperator"> Henry Wadsworth Longfellow <img src="./curly-seperator.8170185f.svg" alt="curly seperator"> 1807-1882 <img src="./curly-seperator.8170185f.svg" alt="curly seperator"> A beatiful poem <img src="./curly-seperator.8170185f.svg" alt="curly seperator"></span>
         </p>
       </div>
       <div>
         <p>
-          <span>“A Psalm of Life” <img src="/curly-seperator.8170185f.svg" alt="curly seperator"> Henry Wadsworth Longfellow <img src="/curly-seperator.8170185f.svg" alt="curly seperator"> 1807-1882 <img src="/curly-seperator.8170185f.svg" alt="curly seperator"> A beatiful poem <img src="/curly-seperator.8170185f.svg" alt="curly seperator"></span>
+          <span>“A Psalm of Life” <img src="./curly-seperator.8170185f.svg" alt="curly seperator"> Henry Wadsworth Longfellow <img src="./curly-seperator.8170185f.svg" alt="curly seperator"> 1807-1882 <img src="./curly-seperator.8170185f.svg" alt="curly seperator"> A beatiful poem <img src="./curly-seperator.8170185f.svg" alt="curly seperator"></span>
         </p>
         <p>
-          <span>“A Psalm of Life” <img src="/curly-seperator.8170185f.svg" alt="curly seperator"> Henry Wadsworth Longfellow <img src="/curly-seperator.8170185f.svg" alt="curly seperator"> 1807-1882 <img src="/curly-seperator.8170185f.svg" alt="curly seperator"> A beatiful poem <img src="/curly-seperator.8170185f.svg" alt="curly seperator"></span>
+          <span>“A Psalm of Life” <img src="./curly-seperator.8170185f.svg" alt="curly seperator"> Henry Wadsworth Longfellow <img src="./curly-seperator.8170185f.svg" alt="curly seperator"> 1807-1882 <img src="./curly-seperator.8170185f.svg" alt="curly seperator"> A beatiful poem <img src="./curly-seperator.8170185f.svg" alt="curly seperator"></span>
         </p>
       </div>
       <div>
         <p>
-          <span>“A Psalm of Life” <img src="/curly-seperator.8170185f.svg" alt="curly seperator"> Henry Wadsworth Longfellow <img src="/curly-seperator.8170185f.svg" alt="curly seperator"> 1807-1882 <img src="/curly-seperator.8170185f.svg" alt="curly seperator"> A beatiful poem <img src="/curly-seperator.8170185f.svg" alt="curly seperator"></span>
+          <span>“A Psalm of Life” <img src="./curly-seperator.8170185f.svg" alt="curly seperator"> Henry Wadsworth Longfellow <img src="./curly-seperator.8170185f.svg" alt="curly seperator"> 1807-1882 <img src="./curly-seperator.8170185f.svg" alt="curly seperator"> A beatiful poem <img src="./curly-seperator.8170185f.svg" alt="curly seperator"></span>
         </p>
         <p>
-          <span>“A Psalm of Life” <img src="/curly-seperator.8170185f.svg" alt="curly seperator"> Henry Wadsworth Longfellow <img src="/curly-seperator.8170185f.svg" alt="curly seperator"> 1807-1882 <img src="/curly-seperator.8170185f.svg" alt="curly seperator"> A beatiful poem <img src="/curly-seperator.8170185f.svg" alt="curly seperator"></span>
+          <span>“A Psalm of Life” <img src="./curly-seperator.8170185f.svg" alt="curly seperator"> Henry Wadsworth Longfellow <img src="./curly-seperator.8170185f.svg" alt="curly seperator"> 1807-1882 <img src="./curly-seperator.8170185f.svg" alt="curly seperator"> A beatiful poem <img src="./curly-seperator.8170185f.svg" alt="curly seperator"></span>
         </p>
       </div>
       <div>
-        <img src="/author-head.47448238.png" alt="Henry Wadsworth Longfellow head">
-        <img src="/author-body.03a92a32.png" alt="Henry Wadsworth Longfellow body">
+        <img src="./author-head.47448238.png" alt="Henry Wadsworth Longfellow head">
+        <img src="./author-body.03a92a32.png" alt="Henry Wadsworth Longfellow body">
       </div>
     </section>
 
     <section>
-      <img src="/abstract-face.c7c17b89.svg" alt="abstract face">
+      <img src="./abstract-face.c7c17b89.svg" alt="abstract face">
       <p>Tell me not, in mournful numbers,</p>
       <p>Life is but an... <span>empty dream</span></p>
       <p>For the soul is dead that slumbers,</p>
@@ -89,7 +89,7 @@
           <div></div>
           <!--Bottom-->
           <div></div>
-          <img src="/author-character.5fdc0be8.png" alt="author character">
+          <img src="./author-character.5fdc0be8.png" alt="author character">
         </div>
       </div>
         <p>
